# rustbook

./: .gitignore  Cargo.toml  README.md
artifact/: c8ex3.txt
config/: log4rs.yaml
datatest/: poem.txt  poem.txt.share1  poem.txt.share2
libs/adder/: Cargo.toml
libs/adder/src/: lib.rs
libs/restaurant/: Cargo.toml
libs/restaurant/src/: front_of_house.rs  lib.rs
src/: chap10.rs  chap12.rs  chap13.rs  chap2.rs  chap4.rs  chap5.rs  chap6.rs  chap7.rs  chap8.rs  chap9.rs  collatz.rs  encrypt_decrypt.rs  envargs.rs  file_status.rs  lib.rs  lib12.rs  lib_fs.rs  lib_pg.rs  lib_wd.rs  main.rs  postgresql.rs  wdinfo.rs
src/wdinfo/: file_status.rs  libmysql.rs  mod.rs  pem.rs  postgresql.rs  sqltrait.rs  ubuntu.rs  wdinfo.rs
