[package]
name = "postgresql"
version = "0.1.0"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

[dependencies]
postgres = "0.19.0"          # connect to postgresql
percent-encoding = "2.1.0"   # URL encoding
chrono = "0.4.19"            # SystemTime format to string
walkdir = "2.3.1"            # get all files under folder including sub-folder
