[package]
name = "wdinfo"
version = "0.1.1"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

[dependencies]
postgres = "0.19.0"          # connect to postgresql
percent-encoding = "2.1.0"   # URL encoding
chrono = "0.4.19"            # SystemTime format to string
walkdir = "2.3.1"            # get all files under folder including sub-folder
log = "*"
#test-logger = "*"
log4rs = "*"
#log4rs-rolling-file = "*"
# env_logger = "*"

#--------------------------------------------#
# compile command: cargo build --lib --bins  #
# or: cargo build --lib --bins --release     #
#--------------------------------------------#
[lib]
name = "lib_wd"
path = "src/lib.rs"

[[bin]]
name = "wdinfo"
path = "src/main.rs"