[package]
name = "wdinfo"
version = "0.1.1"
authors = ["Luke Du <sinnud@gmail.com>"]
edition = "2018"

[dependencies]
postgres = "0.19.0"          # connect to postgresql
percent-encoding = "2.1.0"   # URL encoding
chrono = "0.4.19"            # SystemTime format to string
walkdir = "2.3.1"            # get all files under folder including sub-folder
log = "*"
#test-logger = "*"
log4rs = "*"
#log4rs-rolling-file = "*"
# env_logger = "*"
mysql = "*"                  # connect to MySql
#md5 hash
md5 = "*"
# for csv file, used in src/wdinfo/pem.rs
csv = "*"
serde = "*"

#--------------------------------------------#
# compile command: cargo build --lib --bins  #
# or: cargo build --lib --bins --release     #
#--------------------------------------------#
[lib]
name = "wdinfo"
path = "src/wdinfo/mod.rs"

[[bin]]
name = "wdsync"
path = "src/bin/main.rs"

[[bin]]
name = "gpsync"
path = "src/bin/gpsync.rs"
